--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "axios": "^1.2.2",
     "expo": "^47.0.13",
     "expo-checkbox": "~2.2.2",
     "expo-image-picker": "~14.0.2",
